--- a/Flock/Base.lproj/Main.storyboard
+++ b/Flock/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="31f-4a-ta2">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="31f-4a-ta2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,7 +23,7 @@
         <!--Login View Controller-->
         <scene sceneID="lCy-G0-hrL">
             <objects>
-                <viewController id="31f-4a-ta2" customClass="LoginViewController" customModule="Flock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginViewController" id="31f-4a-ta2" customClass="LoginViewController" customModule="Flock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jmn-pN-DLN"/>
                         <viewControllerLayoutGuide type="bottom" id="KnB-YB-cuC"/>
@@ -32,25 +32,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeU-mO-eqx" customClass="FBSDKLoginButton">
-                                <rect key="frame" x="164" y="319" width="46" height="30"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dude" translatesAutoresizingMaskIntoConstraints="NO" id="JZL-JZ-nmw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hqd-cV-IcI" customClass="FBSDKLoginButton">
+                                <rect key="frame" x="77.5" y="575" width="220" height="47"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="Dpy-GL-8a3"/>
+                                    <constraint firstAttribute="height" constant="47" id="zkM-k4-cTN"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LeP-7A-COl">
+                                <rect key="frame" x="77.5" y="534.5" width="220" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="w2L-U3-Q5R"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LT-xg-8r0">
+                                <rect key="frame" x="164.5" y="629" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="termsAndConditionsWasPressed:" destination="31f-4a-ta2" eventType="touchUpInside" id="fCN-aF-d0w"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zeU-mO-eqx" firstAttribute="centerY" secondItem="Brv-Zu-HOH" secondAttribute="centerY" id="hvN-RN-Ncr"/>
-                            <constraint firstItem="zeU-mO-eqx" firstAttribute="centerX" secondItem="Brv-Zu-HOH" secondAttribute="centerX" id="lYY-dM-SiX"/>
+                            <constraint firstItem="KnB-YB-cuC" firstAttribute="top" secondItem="1LT-xg-8r0" secondAttribute="bottom" constant="8" symbolic="YES" id="2Gu-Fw-gLi"/>
+                            <constraint firstItem="LeP-7A-COl" firstAttribute="centerY" secondItem="Hqd-cV-IcI" secondAttribute="centerY" id="82f-Rj-k0l"/>
+                            <constraint firstAttribute="trailing" secondItem="JZL-JZ-nmw" secondAttribute="trailing" id="Ifk-qf-O1I"/>
+                            <constraint firstItem="JZL-JZ-nmw" firstAttribute="top" secondItem="Brv-Zu-HOH" secondAttribute="top" id="MOv-fl-ATU"/>
+                            <constraint firstItem="KnB-YB-cuC" firstAttribute="top" secondItem="JZL-JZ-nmw" secondAttribute="bottom" id="cNK-pL-YVg"/>
+                            <constraint firstItem="Hqd-cV-IcI" firstAttribute="centerX" secondItem="JZL-JZ-nmw" secondAttribute="centerX" id="dpk-ff-iXy"/>
+                            <constraint firstItem="1LT-xg-8r0" firstAttribute="top" secondItem="Hqd-cV-IcI" secondAttribute="bottom" constant="7" id="hVa-P6-IIB"/>
+                            <constraint firstItem="1LT-xg-8r0" firstAttribute="centerX" secondItem="JZL-JZ-nmw" secondAttribute="centerX" id="l6p-99-7Go"/>
+                            <constraint firstItem="LeP-7A-COl" firstAttribute="centerX" secondItem="Hqd-cV-IcI" secondAttribute="centerX" id="mua-ib-fzf"/>
+                            <constraint firstItem="JZL-JZ-nmw" firstAttribute="leading" secondItem="Brv-Zu-HOH" secondAttribute="leading" id="qkx-zS-yj8"/>
+                            <constraint firstItem="LeP-7A-COl" firstAttribute="width" secondItem="Hqd-cV-IcI" secondAttribute="width" id="vBB-nu-1xu"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="loginButton" destination="zeU-mO-eqx" id="iai-VQ-VCv"/>
+                        <outlet property="loadingSquareScreenView" destination="LeP-7A-COl" id="nrB-Or-wWd"/>
+                        <outlet property="loginButton" destination="Hqd-cV-IcI" id="UmZ-Pf-X6j"/>
+                        <outlet property="termsAndConditionsLabel" destination="1LT-xg-8r0" id="gbX-9t-ut2"/>
                         <segue destination="fVv-UV-qqV" kind="show" identifier="LOGIN_IDENTIFIER" id="czf-0v-4t8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fVh-sK-dFc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="156" y="157"/>
+            <point key="canvasLocation" x="156" y="156.97151424287858"/>
         </scene>
         <!--Simple Tab Bar Controller-->
         <scene sceneID="QJu-si-53K">
@@ -641,6 +674,7 @@
         <image name="Marker-32" width="32" height="32"/>
         <image name="Meeting-32" width="32" height="32"/>
         <image name="User-32" width="32" height="32"/>
+        <image name="dude" width="914" height="1400"/>
         <image name="whiteCancelIcon" width="200" height="200"/>
         <image name="whiteCheckmarkIcon" width="384" height="384"/>
     </resources>
